# Geometry

./: CMakeLists.txt  README.md
Headers/: circle.h  point.h  ray.h  segment.h  vector.h
Headers/src/: circle.cpp  line.cpp
geometry/: i_shape.h  line.h  polygon.h
geometry/src/: polygon.cpp  ray.cpp  segment.cpp
src/: point.cpp  vector.cpp
